Add website color

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 
     <meta property="og:site_name" content="Lony Michaux — CV numérique" />
 
+    <meta name="theme-color" content="#160e1d" />
+
+    <meta name="apple-mobile-web-app-status-bar-style" content="#160e1d" />
+
+    <meta name="msapplication-navbutton-color" content="#160e1d" />
+
     <title>Lony Michaux — CV numérique</title>
   </head>
   <body class="loading">
