Add footer and improve soft skills design

--- a/index.html
+++ b/index.html
@@ -325,16 +325,6 @@
         <h1>Mes compétences</h1>
 
         <div class="skills-list">
-          <div class="skills-category skills-category-soft-skills">
-            <h3>Soft skills</h3>
-            <ul>
-              <li>- Communication</li>
-              <li>- Créativité</li>
-              <li>- Adaptabilité</li>
-              <li>- Organisation</li>
-            </ul>
-          </div>
-
           <div class="skills-category">
             <h3>Langages</h3>
             <ul>
@@ -454,11 +444,35 @@
               </li>
             </ul>
           </div>
+
+          <div class="skills-category skills-category-soft-skills">
+            <h3>Soft skills</h3>
+            <ul>
+              <li>Communication</li>
+              <li>Créativité</li>
+              <li>Adaptabilité</li>
+              <li>Organisation</li>
+            </ul>
+          </div>
         </div>
       </section>
 
       <!-- TODO: Dernière section : Accéder au CV format PDF -->
     </main>
+
+    <footer>
+      <b>Lony Michaux</b>
+      <a target="_blank" href="mailto:michaux.lony@gmail.com"
+        >Mail : michaux.lony@gmail.com</a
+      >
+      <a
+        target="_blank"
+        href="https://www.linkedin.com/in/lony-michaux-719b1228b/"
+        >LinkedIn</a
+      >
+
+      <a target="_blank" href="https://github.com/lonyyy/">GitHub</a>
+    </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
