--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <a href="#my-formation">Ma formation</a>
         <a href="#my-projects">Mes projets</a>
         <a href="#my-skills">Mes compétences</a>
+        <a href="#my-hobbies">Mes loisirs</a>
         <a class="button" href="mailto:michaux.lony@gmail.com">Me contacter</a>
       </nav>
     </header>
@@ -453,6 +454,88 @@
               <li>Adaptabilité</li>
               <li>Organisation</li>
             </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="hobbies-section" id="my-hobbies" data-aos="fade-up">
+        <h1>Mes hobbies</h1>
+
+        <div class="hobbies-list">
+          <div class="hobby hobby-cinema">
+            <h2>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"
+                fill="white"
+              >
+                <path
+                  d="M448 32l-86.1 0-1 1-127 127 92.1 0 1-1L453.8 32.3c-1.9-.2-3.8-.3-5.8-.3zm64 128l0-64c0-15.1-5.3-29.1-14-40l-104 104L512 160zM294.1 32l-92.1 0-1 1L73.9 160l92.1 0 1-1 127-127zM64 32C28.7 32 0 60.7 0 96l0 64 6.1 0 1-1 127-127L64 32zM512 192L0 192 0 416c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-224z"
+                />
+              </svg>
+              Cinéma
+            </h2>
+
+            <div>
+              <p>
+                Passionné par le cinéma et tout ce qui l'entoure, j’aime
+                regarder des films et surtout en réaliser avec mes amis. Je
+                m'occupe de l'écriture à la réalisation, en passant par le
+                montage, en veillant à chaque détail, pour offrir une expérience
+                immersive aux spectateurs.
+
+                <br />
+                <br />
+
+                Bien que nos créations ne soient pas encore publiées, nous
+                travaillons avec acharnement dans notre temps libre pour les
+                partager le plus rapidement avec le grand public.
+              </p>
+
+              <a
+                target="_blank"
+                href="https://www.instagram.com/gloomypicturesprod"
+                class="hobby-cinema-social"
+              >
+                <img
+                  src="assets/images/logos/instagram.png"
+                  width="30"
+                  height="30"
+                  alt=""
+                />
+                <span>Instagram</span>
+              </a>
+            </div>
+          </div>
+          <div class="hobby">
+            <h2>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 640 512"
+                fill="white"
+              >
+                <path
+                  d="M256 0L576 0c35.3 0 64 28.7 64 64l0 224c0 35.3-28.7 64-64 64l-320 0c-35.3 0-64-28.7-64-64l0-224c0-35.3 28.7-64 64-64zM476 106.7C471.5 100 464 96 456 96s-15.5 4-20 10.7l-56 84L362.7 169c-4.6-5.7-11.5-9-18.7-9s-14.2 3.3-18.7 9l-64 80c-5.8 7.2-6.9 17.1-2.9 25.4s12.4 13.6 21.6 13.6l80 0 48 0 144 0c8.9 0 17-4.9 21.2-12.7s3.7-17.3-1.2-24.6l-96-144zM336 96a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zM64 128l96 0 0 256 0 32c0 17.7 14.3 32 32 32l128 0c17.7 0 32-14.3 32-32l0-32 160 0 0 64c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 192c0-35.3 28.7-64 64-64zm8 64c-8.8 0-16 7.2-16 16l0 16c0 8.8 7.2 16 16 16l16 0c8.8 0 16-7.2 16-16l0-16c0-8.8-7.2-16-16-16l-16 0zm0 104c-8.8 0-16 7.2-16 16l0 16c0 8.8 7.2 16 16 16l16 0c8.8 0 16-7.2 16-16l0-16c0-8.8-7.2-16-16-16l-16 0zm0 104c-8.8 0-16 7.2-16 16l0 16c0 8.8 7.2 16 16 16l16 0c8.8 0 16-7.2 16-16l0-16c0-8.8-7.2-16-16-16l-16 0zm336 16l0 16c0 8.8 7.2 16 16 16l16 0c8.8 0 16-7.2 16-16l0-16c0-8.8-7.2-16-16-16l-16 0c-8.8 0-16 7.2-16 16z"
+                />
+              </svg>
+
+              Montage
+            </h2>
+
+            <p>
+              En lien avec ma passion pour le cinéma, le montage vidéo est un
+              domaine que j'apprécie particulièrement. Peu importe le type de
+              vidéo : vlog, court-métrage, mini-documentaire... J'aime assembler
+              les plans, les sons et les effets pour créer une vidéo qui raconte
+              une histoire qui intéresse et touche le spectateur.
+
+              <br />
+              <br />
+
+              J'utilise principalement Adobe Premiere Pro et je transitionne à
+              DaVinci Resolve qui permet de réaliser des montages plus poussés,
+              avec par exemple une gestion de la colorimétrie avancée.
+            </p>
           </div>
         </div>
       </section>
