Add 15 lines on the presentation, add "show details" button

--- a/index.html
+++ b/index.html
@@ -78,7 +78,15 @@
             Étudiant en deuxième année de BUT Informatique à l’Université de
             Lille, je suis particulièrement intéressé par le développement
             d’applications mobiles et la création d’expériences utilisateur
-            innovantes.
+            innovantes. Mon projet Yudel, une application mobile de musique, est
+            une réalisation personnelle qui illustre mon intérêt pour ce
+            domaine. Passionné par les nouvelles technologies, je suis toujours
+            à l'affût des dernières tendances et je suis ravi de découvrir de
+            nouveaux langages de programmation et outils de développement. À
+            terme, j’aimerais travailler dans une entreprise spécialisée dans le
+            développement d’applications mobiles ou d’expériences de réalité
+            virtuelle. Un stage me permettrait d’acquérir une expérience
+            professionnelle solide et de me rapprocher de mon objectif.
           </p>
         </div>
 
@@ -174,20 +182,21 @@
                   Application permettant de télécharger et donc de lire de la
                   musique même hors-ligne.
                 </p>
-                <a
-                  class="button"
-                  target="_blank"
-                  href="https://github.com/lonyyy/yudel-releases/releases/download/demo/yudel-demo.apk"
-                  >Télécharger la version démo (APK)</a
-                >
+
+                <div class="project-buttons">
+                  <a
+                    class="button"
+                    target="_blank"
+                    href="https://github.com/lonyyy/yudel-releases/releases/download/demo/yudel-demo.apk"
+                    >Télécharger la version démo (APK)</a
+                  >
+                  <button class="secondary project-btn-details">
+                    Afficher les détails techniques
+                  </button>
+                </div>
               </div>
 
               <div class="project-specifications">
-                <div class="project-specification">
-                  <h2>Technologies</h2>
-                  <div>Dart avec Flutter, SQL</div>
-                </div>
-
                 <div class="project-specification">
                   <h2>Fonctionnalités</h2>
                   <div>
@@ -201,15 +210,22 @@
                   </div>
                 </div>
 
-                <div class="project-specification">
-                  <h2>Versions</h2>
-                  <div>
-                    <a
-                      href="https://github.com/lonyyy/yudel-releases/releases"
-                      target="_blank"
-                    >
-                      https://github.com/lonyyy/yudel-releases/releases</a
-                    >
+                <div class="project-technos-and-versions">
+                  <div class="project-specification">
+                    <h2>Technologies</h2>
+                    <div>Dart avec Flutter, SQL</div>
+                  </div>
+
+                  <div class="project-specification">
+                    <h2>Versions</h2>
+                    <div>
+                      <a
+                        href="https://github.com/lonyyy/yudel-releases/releases"
+                        target="_blank"
+                      >
+                        https://github.com/lonyyy/yudel-releases/releases</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -260,20 +276,20 @@
                   des niveaux et des étages où il rencontrera des monstres et
                   des objets qui l'aideront dans cette aventure.
                 </p>
-                <a
-                  class="button"
-                  target="_blank"
-                  href="https://github.com/lonyyy/donjon-hexagone-agile"
-                  >Accéder au GitHub</a
-                >
+                <div class="project-buttons">
+                  <a
+                    class="button"
+                    target="_blank"
+                    href="https://github.com/lonyyy/donjon-hexagone-agile"
+                    >Accéder au GitHub</a
+                  >
+                  <button class="secondary project-btn-details">
+                    Afficher les détails techniques
+                  </button>
+                </div>
               </div>
 
               <div class="project-specifications">
-                <div class="project-specification">
-                  <h2>Technologies</h2>
-                  <div>Java, JUnit, Terminal, Méthode agile en groupe de 6</div>
-                </div>
-
                 <div class="project-specification">
                   <h2>Fonctionnalités</h2>
                   <div>
@@ -287,15 +303,24 @@
                   </div>
                 </div>
 
-                <div class="project-specification">
-                  <h2>Code source</h2>
-                  <div>
-                    <a
-                      href="https://github.com/lonyyy/donjon-hexagone-agile"
-                      target="_blank"
-                    >
-                      https://github.com/lonyyy/donjon-hexagone-agile</a
-                    >
+                <div class="project-technos-and-versions">
+                  <div class="project-specification">
+                    <h2>Technologies</h2>
+                    <div>
+                      Java, JUnit, Terminal, Méthode agile en groupe de 6
+                    </div>
+                  </div>
+
+                  <div class="project-specification">
+                    <h2>Code source</h2>
+                    <div>
+                      <a
+                        href="https://github.com/lonyyy/donjon-hexagone-agile"
+                        target="_blank"
+                      >
+                        https://github.com/lonyyy/donjon-hexagone-agile</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -459,7 +484,7 @@
       </section>
 
       <section class="hobbies-section" id="my-hobbies" data-aos="fade-up">
-        <h1>Mes hobbies</h1>
+        <h1>Mes loisirs</h1>
 
         <div class="hobbies-list">
           <div class="hobby hobby-cinema">
